@@ -7,7 +7,7 @@
 }
 .programlisting
 {
-  /* tango:sk blue 0/1 */
+  /* tango:sky blue 0/1 */
   background: #e6f3ff;
   border: solid 1px #729fcf;
   padding: 0.5em;
@@ -197,16 +197,39 @@ hr
 
 /* code listings */
 
-pre .cbracket   { color: #a40000; } /* tango: scarlet red 3 */
-pre .comment    { color: #a1a39d; } /* tango: aluminium 4 */
-pre .function   { color: #000000; font-weight: bold; }
-pre .function a { color: #11326b; font-weight: bold; } /* tango: sky blue 4 */
-pre .keyword    { color: #4e9a06; } /* tango: chameleon 3  */
-pre .linenum    { color: #babdb6; } /* tango: aluminium 3 */
-pre .normal     { color: #000000; }
-pre .number     { color: #75507b; } /* tango: plum 2 */
-pre .preproc    { color: #204a87; } /* tango: sky blue 3  */
-pre .string     { color: #c17d11; } /* tango: chocolate 2 */
-pre .type       { color: #000000; }
-pre .type a     { color: #11326b; } /* tango: sky blue 4 */
-pre .symbol     { color: #ce5c00; } /* tango: orange 3 */
+.code .cbracket   { color: #a40000; } /* tango: scarlet red 3 */
+.code .comment    { color: #a1a39d; } /* tango: aluminium 4 */
+.code .function   { color: #000000; font-weight: bold; }
+.code .function a { color: #11326b; font-weight: bold; } /* tango: sky blue 4 */
+.code .keyword    { color: #4e9a06; } /* tango: chameleon 3  */
+.code .linenum    { color: #babdb6; } /* tango: aluminium 3 */
+.code .normal     { color: #000000; }
+.code .number     { color: #75507b; } /* tango: plum 2 */
+.code .preproc    { color: #204a87; } /* tango: sky blue 3  */
+.code .string     { color: #c17d11; } /* tango: chocolate 2 */
+.code .type       { color: #000000; }
+.code .type a     { color: #11326b; } /* tango: sky blue 4 */
+.code .symbol     { color: #ce5c00; } /* tango: orange 3 */
+
+/* line numbers */
+ol.code
+{
+  margin: 0;
+  padding: 0em 0em 0em 2.5em;
+  font-family: "Courier New", Courier, monospace;
+  /*list-style-position: outside;*/
+  list-style-type: decimal-leading-zero;
+  /* tango:sky blue 0.5 */
+  background: #a6c5e3;
+  border: solid 1px #729fcf;
+  /* tango:aluminium 6 */
+  color: #2e3436;
+}
+ol.code li
+{
+  padding: 0em 0em 0em 0.5em;
+  /* tango:sky blue 0 */
+  background: #e6f3ff;
+  white-space: pre;
+}
+
