@@ -1,5 +1,14 @@
 2009-01-21  Stefan Kost  <ensonic@users.sf.net>
 
+	* TODO:
+	* configure.in:
+	* gtkdoc-fixxref.in:
+	* style.css:
+	  Match css of highlight with source-highlight. Handle line numbering by
+	  our-selfs. Still stupid browsers copy '#' chars for each line number.
+
+2009-01-21  Stefan Kost  <ensonic@users.sf.net>
+
 	* gtkdoc-fixxref.in:
 	  Try to xref first word in 'normal' span.
 
